--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     .hidden{display:none}
     .avatar{width:64px;height:64px;border-radius:50%;object-fit:cover}
   </style>
-  <!-- supabase-js -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+  <!-- supabase-js UMD (v2) - exposes a global `supabase` object -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
   <div id="app">
@@ -115,7 +115,12 @@ const SUPABASE_URL = 'https://sljrlvpfdgaprubfmtnu.supabase.co';
 const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNsanJsdnBmZGdhcHJ1YmZtdG51Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ3NzM5MDYsImV4cCI6MjA3MDM0OTkwNn0.H-bgKSnEyU_TeUHRd18pR9nkYfeD7WkV3wkpoKazuw4';
 /* ================================== */
 
-const supabase = supabaseLib.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+/*
+  IMPORTANT: the UMD bundle exposes a global `supabase` object.
+  Destructure createClient from it and then create a client instance.
+*/
+const { createClient } = supabase;
+const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
 // DOM Elements
 const statusEl = document.getElementById('status');
@@ -204,7 +209,7 @@ async function initAfterAuth() {
     .eq('id', currentUser.id)
     .single();
 
-  if (error && error.code === 'PGRST116' /* no row */) {
+  if (error && (error.code === 'PGRST116' || error.message && error.message.includes('No rows'))) {
     // create one
     await supabase.from('profiles').insert({ id: currentUser.id }).select();
     profile = { id: currentUser.id };
@@ -247,7 +252,8 @@ btnSaveProfile.addEventListener('click', async () => {
     updates.avatar_url = publicUrl.data.publicUrl;
   }
 
-  const { data, error } = await supabase.from('profiles').upsert(updates, { returning: 'representation' }).select().eq('id', currentUser.id);
+  // Use upsert: returning representation may return an array
+  const { data, error } = await supabase.from('profiles').upsert(updates, { returning: 'representation' }).select();
   if (error) {
     alert('Save profile error: ' + error.message);
     return;
@@ -291,7 +297,9 @@ async function fetchMessages() {
 // Realtime subscribe to messages table
 let messagesSubscription = null;
 function subscribeMessages(){
-  if (messagesSubscription) messagesSubscription.unsubscribe();
+  if (messagesSubscription) {
+    try { messagesSubscription.unsubscribe(); } catch(e) { /* ignore */ }
+  }
 
   messagesSubscription = supabase
     .channel('public:messages')
