--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 const SUPABASE_URL = 'https://sljrlvpfdgaprubfmtnu.supabase.co';
 const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNsanJsdnBmZGdhcHJ1YmZtdG51Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ3NzM5MDYsImV4cCI6MjA3MDM0OTkwNn0.H-bgKSnEyU_TeUHRd18pR9nkYfeD7WkV3wkpoKazuw4';
 /* ================================== */
-
+const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 /*
   IMPORTANT: the UMD bundle exposes a global `supabase` object.
   Destructure createClient from it and then create a client instance.
